[build-system]
build-backend = 'flit_core.buildapi'
requires = ['flit_core >=3.5.1,<4']

[project]
authors = [{name = 'Tom Cassidy', email = 'wirelessduck+py@gmail.com'}]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]
dependencies = [
    'keyring>=23.4.0'
]
description = 'keyring backend plugin to retrieve credentials from environment variables.'
name = 'keyrings.envvars'
readme = 'README.rst'
requires-python = '>=3.8,<4'
version = '0.1.0rc0'

[project.entry-points."keyring.backends"]
envvars = 'keyrings.envvars.keyring:Keyring'

[project.optional-dependencies]
flake8 = [
    'darglint==1.8.1',
    'dlint==0.12.0',
    'flake8==4.0.1',
    'flake8-aaa==0.12.0',
    'flake8-adjustable-complexity==0.0.5',
    'flake8-annotations==2.7.0',
    'flake8-annotations-complexity==0.0.6',
    'flake8-annotations-coverage==0.0.5',
    'flake8-bandit==2.1.2',
    'flake8-black==0.2.3',
    'flake8-blind-except==0.2.0',
    'flake8-breakpoint==1.1.0',
    'flake8-broken-line==0.4.0',
    'flake8-bugbear==21.9.2',
    'flake8-builtins==1.5.3',
    'flake8-class-attributes-order==0.1.2',
    'flake8-commas==2.1.0',
    'flake8-comprehensions==3.7.0',
    'flake8-datetimez==20.10.0',
    'flake8-debugger==4.0.0',
    'flake8-docstrings==1.6.0',
    'flake8-eradicate==1.2.0',
    'flake8-executable==2.1.1',
    'flake8-expression-complexity==0.0.9',
    'flake8-fine-pytest==1.0.2',
    'flake8-functions==0.0.6',
    'flake8-functions-names==0.2.0',
    'flake8-future-annotations==0.0.4',
    'flake8-if-statements==0.1.0',
    'flake8-isort==4.1.1',
    'flake8-libfaketime==1.1',
    'flake8-literal==1.2.0',
    'flake8-logging-format==0.6.0',
    'flake8-markdown==0.3.0',
    'flake8-no-implicit-concat==0.3.1',
    'flake8-noqa==1.2.0',
    'flake8-pep3101==1.3.0',
    'flake8-pie==0.15.0',
    'flake8-print==4.0.0',
    'flake8-printf-formatting==1.1.2',
    'flake8-pyi==20.10.0',
    'flake8-pytest-style==1.5.1',
    'flake8-quotes==3.3.1',
    'flake8-return==1.1.3',
    'flake8-rst==0.8.0',
    'flake8-rst-docstrings==0.2.3',
    'flake8-simplify==0.14.2',
    'flake8-spellcheck==0.24.0',
    'flake8-strftime==0.3.2',
    'flake8-string-format==0.3.0',
    'flake8-super==0.1.3',
    'flake8-tidy-imports==4.5.0',
    'flake8-todos==0.1.5',
    'flake8-tuple==0.4.1',
    'flake8-type-checking==1.0.4',
    'flake8-typing-imports==1.11.0',
    'flake8-unused-arguments==0.0.8',
    'flake8-use-fstring==1.3',
    'flake8-use-pathlib==0.2.1',
    'flake8-variables-names==0.0.4',
    'flake8-2020==1.6.0',
    'pep8-naming==0.12.1',
]
mypy = [
    'mypy==0.910',
    'nox==2021.10.01',
    'pytest==6.2.5'
]
pytest = [
    'pytest==6.2.5',
    'pytest-antilru==1.0.5',
    'pytest-cov==2.12.1',
    'pytest-flakefinder==1',
    'pytest-openfiles==0.5',
    'pytest-randomly==3.10.1',
    'pytest-xdist[psutil]==2.3'
]

[project.urls]
Home = 'https://github.com/wwuck'

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.check-wheel-contents]
package = 'src/keyrings'

[tool.isort]
known_first_party = ['keyrings.envvars']
line_length = 120
profile = 'black'

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
